Fix layout bug where menu is visible when content is short

--- a/source/style/_theme/layout.less
+++ b/source/style/_theme/layout.less
@@ -44,6 +44,7 @@ body {
   .position(relative, 0,0,0,0);
   .transform(translate3d(0,0,0));
   background: @color-lightest;
+  min-height: 100vh;
   padding-top: @panel-width-tablet;
   z-index: 2;
 
